@@ -5,7 +5,7 @@ package edu.colorado.phet.capacitorlab.drag;
 import java.awt.geom.Point2D;
 
 import edu.colorado.phet.capacitorlab.model.CLModelViewTransform3D;
-import edu.colorado.phet.capacitorlab.model.ComplexCapacitor;
+import edu.colorado.phet.capacitorlab.model.Capacitor;
 import edu.colorado.phet.common.phetcommon.util.DoubleRange;
 import edu.umd.cs.piccolo.PNode;
 import edu.umd.cs.piccolo.event.PDragSequenceEventHandler;
@@ -21,13 +21,13 @@ import edu.umd.cs.piccolo.event.PInputEvent;
 /* package private */  class PlateSeparationDragHandler extends PDragSequenceEventHandler {
 
     private final PNode dragNode;
-    private final ComplexCapacitor capacitor;
+    private final Capacitor capacitor;
     private final CLModelViewTransform3D mvt;
     private final DoubleRange valueRange;
 
     private double clickYOffset; // y-offset of mouse click from dragNode's origin, in parent node's coordinate frame
 
-    public PlateSeparationDragHandler( PNode dragNode, ComplexCapacitor capacitor, CLModelViewTransform3D mvt, DoubleRange valueRange ) {
+    public PlateSeparationDragHandler( PNode dragNode, Capacitor capacitor, CLModelViewTransform3D mvt, DoubleRange valueRange ) {
         this.dragNode = dragNode;
         this.capacitor = capacitor;
         this.mvt = mvt;
