@@ -34,8 +34,8 @@ public class DielectricModel {
         this.dielectricMaterials = dielectricMaterials;
 
         Battery battery = new Battery( CLConstants.BATTERY_LOCATION, CLConstants.BATTERY_VOLTAGE_RANGE.getDefault(), mvt );
-        ComplexCapacitor capacitor = new ComplexCapacitor( CLConstants.CAPACITOR_LOCATION, CLConstants.PLATE_WIDTH_RANGE.getDefault(), CLConstants.PLATE_SEPARATION_RANGE.getDefault(),
-                                                           dielectricMaterials[0], dielectricOffset, mvt );
+        Capacitor capacitor = new Capacitor( CLConstants.CAPACITOR_LOCATION, CLConstants.PLATE_WIDTH_RANGE.getDefault(), CLConstants.PLATE_SEPARATION_RANGE.getDefault(),
+                                             dielectricMaterials[0], dielectricOffset, mvt );
         circuit = new BatteryCapacitorCircuit( clock, battery, capacitor, CLConstants.BATTERY_CONNECTED, mvt );
 
         capacitanceMeter = new CapacitanceMeter( circuit, worldBounds, CLConstants.CAPACITANCE_METER_LOCATION, CLConstants.CAPACITANCE_METER_VISIBLE );
@@ -67,7 +67,7 @@ public class DielectricModel {
         return circuit.getBattery();
     }
 
-    public ComplexCapacitor getCapacitor() {
+    public Capacitor getCapacitor() {
         return circuit.getCapacitor();
     }
 
@@ -123,8 +123,8 @@ public class DielectricModel {
     public static double getMaxPlateCharge() {
         CLModelViewTransform3D mvt = new CLModelViewTransform3D();
         DielectricMaterial material = new CustomDielectricMaterial( CLConstants.DIELECTRIC_CONSTANT_RANGE.getMax() );
-        ComplexCapacitor capacitor = new ComplexCapacitor( new Point3D.Double(), CLConstants.PLATE_WIDTH_RANGE.getMax(),
-                                                           CLConstants.PLATE_SEPARATION_RANGE.getMin(), material, CLConstants.DIELECTRIC_OFFSET_RANGE.getMin(), mvt );
+        Capacitor capacitor = new Capacitor( new Point3D.Double(), CLConstants.PLATE_WIDTH_RANGE.getMax(),
+                                             CLConstants.PLATE_SEPARATION_RANGE.getMin(), material, CLConstants.DIELECTRIC_OFFSET_RANGE.getMin(), mvt );
         capacitor.setPlatesVoltage( CLConstants.BATTERY_VOLTAGE_RANGE.getMax() );
         return capacitor.getTotalPlateCharge();
     }
@@ -137,8 +137,8 @@ public class DielectricModel {
     public static double getMaxExcessDielectricPlateCharge() {
         CLModelViewTransform3D mvt = new CLModelViewTransform3D();
         DielectricMaterial material = new CustomDielectricMaterial( CLConstants.DIELECTRIC_CONSTANT_RANGE.getMax() );
-        ComplexCapacitor capacitor = new ComplexCapacitor( new Point3D.Double(), CLConstants.PLATE_WIDTH_RANGE.getMax(),
-                                                           CLConstants.PLATE_SEPARATION_RANGE.getMin(), material, CLConstants.DIELECTRIC_OFFSET_RANGE.getMin(), mvt );
+        Capacitor capacitor = new Capacitor( new Point3D.Double(), CLConstants.PLATE_WIDTH_RANGE.getMax(),
+                                             CLConstants.PLATE_SEPARATION_RANGE.getMin(), material, CLConstants.DIELECTRIC_OFFSET_RANGE.getMin(), mvt );
         capacitor.setPlatesVoltage( CLConstants.BATTERY_VOLTAGE_RANGE.getMax() );
         return capacitor.getExcessDielectricPlateCharge();
     }
@@ -155,8 +155,8 @@ public class DielectricModel {
         CLModelViewTransform3D mvt = new CLModelViewTransform3D();
         Battery battery = new Battery( new Point3D.Double(), 0, mvt );
         DielectricMaterial material = new CustomDielectricMaterial( CLConstants.DIELECTRIC_CONSTANT_RANGE.getMin() );
-        ComplexCapacitor capacitor = new ComplexCapacitor( new Point3D.Double(), CLConstants.PLATE_WIDTH_RANGE.getMin(),
-                                                           CLConstants.PLATE_SEPARATION_RANGE.getMin(), material, CLConstants.DIELECTRIC_OFFSET_RANGE.getMin(), mvt );
+        Capacitor capacitor = new Capacitor( new Point3D.Double(), CLConstants.PLATE_WIDTH_RANGE.getMin(),
+                                             CLConstants.PLATE_SEPARATION_RANGE.getMin(), material, CLConstants.DIELECTRIC_OFFSET_RANGE.getMin(), mvt );
         BatteryCapacitorCircuit circuit = new BatteryCapacitorCircuit( new CLClock(), battery, capacitor, false /* batteryConnected */, mvt );
         circuit.setDisconnectedPlateCharge( getMaxPlateCharge() );
         return capacitor.getEffectiveEField();
@@ -171,8 +171,8 @@ public class DielectricModel {
         CLModelViewTransform3D mvt = new CLModelViewTransform3D();
         Battery battery = new Battery( new Point3D.Double(), 0, mvt );
         DielectricMaterial material = new CustomDielectricMaterial( CLConstants.DIELECTRIC_CONSTANT_RANGE.getMax() );
-        ComplexCapacitor capacitor = new ComplexCapacitor( new Point3D.Double(), CLConstants.PLATE_WIDTH_RANGE.getMin(),
-                                                           CLConstants.PLATE_SEPARATION_RANGE.getMin(), material, CLConstants.DIELECTRIC_OFFSET_RANGE.getMax(), mvt );
+        Capacitor capacitor = new Capacitor( new Point3D.Double(), CLConstants.PLATE_WIDTH_RANGE.getMin(),
+                                             CLConstants.PLATE_SEPARATION_RANGE.getMin(), material, CLConstants.DIELECTRIC_OFFSET_RANGE.getMax(), mvt );
         BatteryCapacitorCircuit circuit = new BatteryCapacitorCircuit( new CLClock(), battery, capacitor, false /* batteryConnected */, mvt );
         circuit.setDisconnectedPlateCharge( getMaxPlateCharge() );
         return capacitor.getDielectricEField();
@@ -187,8 +187,8 @@ public class DielectricModel {
     public static double getMaxPlatesDielectricEFieldWithBattery() {
         CLModelViewTransform3D mvt = new CLModelViewTransform3D();
         DielectricMaterial material = new CustomDielectricMaterial( CLConstants.DIELECTRIC_CONSTANT_RANGE.getMax() );
-        ComplexCapacitor capacitor = new ComplexCapacitor( new Point3D.Double(), CLConstants.PLATE_WIDTH_RANGE.getMin(),
-                                                           CLConstants.PLATE_SEPARATION_RANGE.getMin(), material, CLConstants.DIELECTRIC_OFFSET_RANGE.getMax(), mvt );
+        Capacitor capacitor = new Capacitor( new Point3D.Double(), CLConstants.PLATE_WIDTH_RANGE.getMin(),
+                                             CLConstants.PLATE_SEPARATION_RANGE.getMin(), material, CLConstants.DIELECTRIC_OFFSET_RANGE.getMax(), mvt );
         capacitor.setPlatesVoltage( CLConstants.BATTERY_VOLTAGE_RANGE.getMax() );
         return capacitor.getPlatesDielectricEField();
     }
